[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sounds/Cyberpunk Electro EDM (91 BPM) (03-03 SEC) MP3.mp3" type="AudioStream" id=1]
[ext_resource path="res://game/Menu/Menu.gd" type="Script" id=2]
[ext_resource path="res://ui/Font/Gentax.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 2
outline_color = Color( 0.811765, 0.278431, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0352941, 0, 0.0509804, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0117647, 0, 0.0784314, 1 )
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=6]
size = 100
outline_size = 1
outline_color = Color( 0.811765, 0.278431, 1, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0.121569, 0.32549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]

[sub_resource type="Environment" id=9]
background_mode = 4
glow_enabled = true
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="Animation" id=10]
resource_name = "Setup"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Title:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.701961, 1.21176, 1.21176, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "TitleShine"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Title:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 2.6, 5.7, 6.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.701961, 1.21176, 1.21176, 0 ), Color( 0.77, 1.28, 1.52, 1 ), Color( 0.92, 1.54, 1.82, 1 ), Color( 0, 1, 1, 0.282353 ), Color( 0.77, 1.28, 1.52, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MarginContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Title:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Menu" type="Control"]
margin_right = 1080.0
margin_bottom = 1920.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
theme_music = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 235.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.701961, 1.21176, 1.21176, 0 )
text = "Neon Strike"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 43
custom_constants/margin_top = 43
custom_constants/margin_left = 43
custom_constants/margin_bottom = 43
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 43.0
margin_top = 641.0
margin_right = 1037.0
margin_bottom = 1279.0
size_flags_vertical = 4

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
margin_right = 994.0
margin_bottom = 210.0
rect_min_size = Vector2( 800, 210 )
size_flags_horizontal = 7
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1.1, 1.1, 1.1, 1 )
custom_colors/font_color_pressed = Color( 1.2, 1.2, 1.2, 1 )
custom_constants/hseparation = 0
text = "New Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 994.0
margin_bottom = 424.0
rect_min_size = Vector2( 800, 210 )
size_flags_horizontal = 7
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1.1, 1.1, 1.1, 1 )
custom_colors/font_color_pressed = Color( 1.2, 1.2, 1.2, 1 )
custom_constants/hseparation = 0
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 428.0
margin_right = 994.0
margin_bottom = 638.0
rect_min_size = Vector2( 800, 210 )
size_flags_horizontal = 7
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1.1, 1.1, 1.1, 1 )
custom_colors/font_color_pressed = Color( 1.2, 1.2, 1.2, 1 )
custom_constants/hseparation = 0
text = "Quit"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Setup"
anims/Setup = SubResource( 10 )
anims/TitleShine = SubResource( 11 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
